feat: extração lutas, e lutadores do ufcstats
